--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,9 @@
 :root{
     --light-shades: #e8e8e8;
-    --light-accent: #6DECC5;
-    --main-brand: #7D18DE;
-    --dark-accent: #60B289;
+    --light-accent: #e6b4b4;
+    --main-brand: #dc143c;
+    --main-contrast: #6b14dc;
+    --dark-accent: #360303;
     --dark-shades: #212121;
 }
 
@@ -16,7 +17,8 @@
 
 body{
     /*background-image: url("../images/lorem.png");*/
-    color: var(--light-shades);
+    color: var(--light-accent);
+    overflow-x: hidden;
 }
 
 button{
@@ -26,7 +28,7 @@ button{
   }
 
 #sobre{
-    background-color: var(--light-accent);
+    background-color: var(--light-shades);
 }
 
 .hero {
@@ -63,8 +65,9 @@ button{
   }
 
 header {
-    background-color: var(--dark-accent);
-    position: fixed;
+    background-color: var(--main-brand);
+    position: sticky;
+    top: 0;
     width: 100%;
     display: flex;
     justify-content: space-between;
@@ -74,7 +77,7 @@ header {
 
 #IconeMenu {
     width: 50px;
-    z-index: 11;
+    z-index: 2;
     cursor: pointer;
     display: none;
   }
@@ -89,15 +92,14 @@ header {
     .Lista {
       position: absolute;
       top: 100%;
-      right: -120%;
+      right: -50%;
       width: 300px;
-      height: 40vh;
       display: flex;
-      padding: 50px 20px;
+      padding: 20px;
       flex-direction: column;
       align-items: center;
-      background: var(--dark-accent);
-      transition: all 0.55s ease;
+      background: var(--light-accent);
+      transition: all 0.5s ease;
     }
     .Lista a{
       margin-left: 0;
@@ -105,10 +107,8 @@ header {
       margin: 5px 0;
     }
     .Lista.open {
-      right: 0;
-      height: 300px;
+      right: 10px;
       width: 200px;
-      border-radius: 30px;
-      border: solid 2px white;
+      border-radius: 20px;
     }
   }
