--- a/styles/style.css
+++ b/styles/style.css
@@ -1,114 +1,145 @@
 :root{
-    --light-shades: #e8e8e8;
-    --light-accent: #e6b4b4;
-    --main-brand: #dc143c;
-    --main-contrast: #6b14dc;
-    --dark-accent: #360303;
-    --dark-shades: #212121;
+  --light-shades: #e8e8e8;
+  --light-accent: #e6b4b4;
+  --main-brand: #dc143c;
+  --main-contrast: #6b14dc;
+  --dark-accent: #360303;
+  --dark-shades: #212121;
 }
 
 *{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    list-style: none;
-    text-decoration: none;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
 }
 
-body{
-    /*background-image: url("../images/lorem.png");*/
-    color: var(--light-accent);
-    overflow-x: hidden;
+html, body{
+  color: var(--light-accent);
+  overflow-x: hidden;
+  scroll-behavior: smooth;
 }
+
+/* HEADER */
 
 button{
-    border: none;
-    background-color: transparent;
-    cursor: pointer;
-  }
-
-#sobre{
-    background-color: var(--light-shades);
-}
-
-.hero {
-    height: 100vh;
-    background-color: var(--dark-shades);
-    padding: 20px;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
 }
 
 .Lista {
-    display: flex;
-  }
-  
-  .Lista a {
-    font-size: 30px;
-    color: var(--main-brand);
-    margin-left: 50px;
-    font-weight: 100;
-    transition: all 0.55s ease-in-out;
-  }
+  display: flex;
+}
 
+.Lista a {
+  font-size: 30px;
+  margin-left: 50px;
+  font-weight: 100;
+  color: var(--light-shades);
+  transition: all 0.55s ease-in-out;
+}
 
-  button{
-    border: none;
-    background-color: transparent;
-    cursor: pointer;
-  }
-
-  #icone {
-    width: calc(3vmax + 20px);
-  }
-
-  #tema {
-    width: 40px;
-  }
+button{
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+}
 
 header {
-    background-color: var(--main-brand);
-    position: sticky;
-    top: 0;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 30px 10%;
-  }
+  background-color: var(--main-brand);
+  position: sticky;
+  top: 0;
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 30px 10%;
+}
+
+
+#icone {
+  width: calc(3vmax + 20px);
+}
+
+.Principal {
+position: absolute;
+left: calc(2vmax + 10px);
+}
+
+#tema, #IconeMenu {
+width: 40px;
+align-items: center;
+}
+
+.TemaButton, #IconeMenu{
+position: absolute;
+right: calc(2vmax + 10px);
+}
 
 #IconeMenu {
-    width: 50px;
-    z-index: 2;
-    cursor: pointer;
-    display: none;
-  }
+  z-index: 2;
+  cursor: pointer;
+  display: none;
+}
+
+.Oculto {
+display: none;
+}
+
+/* HERO SECTION */
+
+.hero {
+  height: 100vh;
+  background-color: var(--dark-shades);
+  padding: 20px;
+  text-align: center;
+  align-items: center;
+}
+
+.hero h1{
+margin-top: calc(7vmax + 40px);
+font-size: calc(5vmax + 20px);
+}
+
+.hero p{
+font-size: calc(1vmax + 15px);
+}
+
+/* SOBRE SECTION */
+
+#sobre{
+background-color: var(--light-shades);
+}
 
 @media (max-width: 800px) {
-    #IconeMenu {
-      display: block;
-    }
-    #SetaBaixo {
-      display: none;
-    }
-    .Lista {
-      position: absolute;
-      top: 100%;
-      right: -50%;
-      width: 300px;
-      display: flex;
-      padding: 20px;
-      flex-direction: column;
-      align-items: center;
-      background: var(--light-accent);
-      transition: all 0.5s ease;
-    }
-    .Lista a{
-      margin-left: 0;
-      display: block;
-      margin: 5px 0;
-    }
-    .Lista.open {
-      right: 10px;
-      width: 200px;
-      border-radius: 20px;
-    }
+  #IconeMenu {
+    display: flex;
   }
+  .TemaButton {
+    display: none;
+  }
+  .Lista {
+    position: absolute;
+    top: 100%;
+    right: -120%;
+    width: 300px;
+    display: flex;
+    padding: 20px;
+    flex-direction: column;
+    align-items: center;
+    background: var(--light-accent);
+    transition: all 0.5s ease;
+  }
+  .Lista a{
+    margin-left: 0;
+    display: block;
+    margin: 5px 0;
+  }
+  .Lista.open {
+    right: 10px;
+    width: 200px;
+    border-radius: 20px;
+  }
+}
