--- a/styles/appStyle.css
+++ b/styles/appStyle.css
@@ -1,7 +1,19 @@
+:root{
+    --light-shades: #e8e8e8;
+    --light-accent: #e6b4b4;
+    --main-brand: #dc143c;
+    --main-contrast: #6b14dc;
+    --dark-accent: #360303;
+    --dark-shades: #212121;
+  }
 
 *{
     padding: 0px;
     margin: 0px;
+}
+
+body{
+    background-color: var(--light-shades);
 }
 
 #pageContent{
@@ -12,35 +24,34 @@
 }
 
 header{
-    background-color: aqua;
+    background-color: var(--main-brand);
     padding: 10px;
     display: flex;
     justify-content: space-between;
 }header div{width: 50%;}header h1{margin-top: auto;margin-bottom: auto;margin-left: 20px;}
 
 #search{
-    background-color: aliceblue;
     text-align: center;
 }#search input{height: 90%;width: 90%;text-align: center;}
 
 #filter{
-    background-color: rgb(0, 255, 76);
+    background-color: var(--dark-shades);
     width: 20%;
     text-align: center;
 }
 
 footer{
-    background-color: rgb(255, 251, 0);
+    background-color: var(--dark-shades);
 }
 
 #ranks{
-    background-color: rgb(255, 30, 0);
+    background-color: var(--dark-shades);
     width: 20%;
     text-align: center;
 }
 
 #btnConfigs{
-    background-color: rgb(0, 26, 255);
+    background-color: var(--main-brand);
     position: absolute;
     right: 50px;
     bottom: 50px;
@@ -51,7 +62,14 @@ footer{
 }#btnConfigs:hover{scale: 0.9;}
 
 #posts{
-    background-color: rgb(204, 0, 255);
+    background-color: var(--dark-shades);
     width: 60%;
     text-align: center;
+    padding: 10px;
+}
+
+#postResult{
+    background-color: var(--light-shades);
+    padding: 10px;
+    margin: 10px;
 }
