--- a/styles/appStyle.css
+++ b/styles/appStyle.css
@@ -14,11 +14,11 @@
 
 body{
     background-color: var(--light-shades);
+    overflow-y: hidden;
 }
 
 #pageContent{
-    background-color: #212121;
-    margin: 10px;
+    background-color: var(--light-shades);
     display: flex;
     justify-content: space-between;
 }
@@ -28,6 +28,7 @@ header{
     padding: 10px;
     display: flex;
     justify-content: space-between;
+    height: 5vh;
 }header div{width: 50%;}header h1{margin-top: auto;margin-bottom: auto;margin-left: 20px;}
 
 #search{
@@ -36,8 +37,9 @@ header{
 
 #filter{
     background-color: var(--dark-shades);
-    width: 20%;
+    width: 15%;
     text-align: center;
+    color: var(--light-shades);
 }
 
 footer{
@@ -48,6 +50,7 @@ footer{
     background-color: var(--dark-shades);
     width: 20%;
     text-align: center;
+    color: var(--light-shades);
 }
 
 #btnConfigs{
@@ -63,13 +66,32 @@ footer{
 
 #posts{
     background-color: var(--dark-shades);
-    width: 60%;
+    width: 65%;
     text-align: center;
     padding: 10px;
+    color: var(--light-shades);
+    overflow-y: scroll;
+    scroll-snap-type: y mandatory;
+    height: 90vh;
 }
+
+::-webkit-scrollbar{
+    width: 15px;
+}
+
+::-webkit-scrollbar-thumb{
+    background-color: var(--main-brand);
+    border-radius: 20px;
+    border: 0px solid;
+}
+
 
 #postResult{
     background-color: var(--light-shades);
     padding: 10px;
     margin: 10px;
-}
+    border-radius: 10px;
+    color: var(--dark-shades);
+    flex-direction: row;
+    flex-shrink: 0;
+}#postResult a{color: var(--main-brand);}
