--- a/styles/style.css
+++ b/styles/style.css
@@ -73,6 +73,10 @@ width: 40px;
 align-items: center;
 }
 
+#tema2 {
+  width: calc(2vmax + 20px);
+}
+
 .TemaButton, #IconeMenu{
 position: absolute;
 right: calc(2vmax + 10px);
@@ -173,7 +177,7 @@ right: 40px;
     padding: 20px;
     flex-direction: column;
     align-items: center;
-    background: var(--light-accent);
+    background: var(--dark-accent);
     transition: all 0.5s ease;
   }
   .Lista a{
