--- a/styles/appStyle.css
+++ b/styles/appStyle.css
@@ -133,14 +133,18 @@ footer{
       transition: all 0.5s ease;
     }
 
+    #ranks{
+        width: 100vw;
+    }
+
     #filter.open, #ranks.open{
         position: relative;
-        width: 60vw;
         left: 0px
     }
 
     #filter.open + #posts, #filter.open + #posts{
         width: 45vw;
     }
+
 
   }
