--- a/styles/estiloUser.css
+++ b/styles/estiloUser.css
@@ -41,6 +41,72 @@ body{
 
     margin-right: 5%;
     margin-bottom: 2%;
+
+    display: flex;
+}
+
+
+
+#boxAvatar{
+    height: 100%;
+    background-color: rgb(0, 255, 255);
+    aspect-ratio: 1/1;
+}
+
+#userAvatar{
+    background-color:black;
+    border-radius: 100%;
+    width: 100%;
+    aspect-ratio: 1/1;
+}
+
+#boxTexto{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+#mainInfo p{
+    /* coloca cor de fundo */
+}
+
+#boxUserName, #boxInfo{
+    padding-left: 6%;
+    padding-right: 5%;
+}
+
+
+#boxUserName{
+    width: auto;
+    height: 50%;
+    background-color: azure;
+}
+
+#userName{
+    background-color: brown;
+    width: 100%;
+    height: 75%;
+}
+
+
+#boxInfo{
+    width: auto;
+    height: 50%;
+    background-color: black;
+    display: flex;
+    justify-content: space-between;
+}
+
+#nomeDoUsuario{
+    background-color:chocolate;
+    height: 30px;
+    width: 40%;
+}
+
+#pontos{
+    background-color: darkgreen;
+    height: 30px;
+    width: 40%;
 }
 
 /*  */
@@ -48,20 +114,30 @@ body{
 #center{
     background-color: black;
     width: 100%;
-    height: 100%;
+    height: 68%; /* MELHORAR */
     display: flex;
     justify-content: space-between;
 }
 
 
-#postsDoUser{
+#boxPostsDoUser{
+    background-color: rgb(160, 17, 17);
+    width: 73%;
+    height: 100%;
+}
+
+#boxConquistas{
     background-color: rgb(255, 255, 255);
     width: 37%;
     height: 100%;
 }
 
-#conquistas{
-    background-color: rgb(160, 17, 17);
-    width: 73%;
-    height: 100%;
+#quadradoConquistas{
+    margin: auto;
+    margin-top: 5%;
+
+    width: 85%;
+    height: 88%;
+    border-radius: 23px;
+    background-color: blue;
 }
