pequenas mudanças na responsibilidade da pagina user

--- a/styles/estiloUser.css
+++ b/styles/estiloUser.css
@@ -20,7 +20,7 @@ body{
 /*  */
 
 #geral {
-    width: 79vw;
+    width: -webkit-fill-available;
     height: 100vh;
     background-color: coral;
 }
@@ -50,6 +50,7 @@ body{
 #boxAvatar{
     height: 100%;
     background-color: rgb(0, 255, 255);
+    /* width: 28%; */
     aspect-ratio: 1/1;
 }
 
@@ -122,7 +123,7 @@ body{
 
 #boxPostsDoUser{
     background-color: rgb(160, 17, 17);
-    width: 73%;
+    width: -webkit-fill-available;
     height: 100%;
 
     display: flex;
@@ -189,4 +190,21 @@ body{
     background-color: wheat;
     width: 80%;
     height: 50px;
+}
+
+@media(max-width: 800px){
+    #side {
+        display: none;
+    }
+}
+
+@media(max-width: 500px){
+    #boxConquistas {
+        display: none;
+    }
+
+    #boxAvatar{
+        height: 50%;
+        /* boxTexto deixa de exisitir, mainInfo vira wrap, boxUserName e boxPontos têm larguras alteradas; jogar itens de boxTexto para fora */
+    }
 }
