--- a/styles/appStyle.css
+++ b/styles/appStyle.css
@@ -21,6 +21,7 @@ body{
     background-color: var(--light-shades);
     display: flex;
     justify-content: space-between;
+    flex-direction: row-reverse;
 }
 
 header{
@@ -150,11 +151,5 @@ footer{
 
     #filter.open + #posts, #filter.open + #posts{
         width: 45vw;
-    }
-  }
-
-  @media(min-width: 800px){
-    #pageContent{
-        flex-direction: row !important;
     }
   }
