--- a/styles/estiloUser.css
+++ b/styles/estiloUser.css
@@ -3,6 +3,7 @@ body{
     display: flex;
     padding: 0;
     margin: 0;
+    text-align: center;
 }
 
 #side {
@@ -82,7 +83,7 @@ body{
     background-color: azure;
 }
 
-#userName{
+#nomeDoUsuario{
     background-color: brown;
     width: 100%;
     height: 75%;
@@ -97,7 +98,7 @@ body{
     justify-content: space-between;
 }
 
-#nomeDoUsuario{
+#userName{
     background-color:chocolate;
     height: 30px;
     width: 40%;
