--- a/styles/style.css
+++ b/styles/style.css
@@ -59,8 +59,8 @@ header {
 }
 
 
-#icone {
-  width: calc(3vmax + 20px);
+#icone{
+  width: calc(9vmax + 90px) !important;
 }
 
 .Principal {
@@ -104,7 +104,7 @@ display: none;
 
 .hero h1{
 margin-top: calc(9vmax + 120px);
-font-size: calc(5vmax + 20px);
+font-size: calc(5vmax + 15px);
 }
 
 .hero p{
