--- a/styles/appStyle.css
+++ b/styles/appStyle.css
@@ -13,27 +13,56 @@
 }
 
 body{
-    background-color: var(--light-shades);
+    background-color: var(--dark-shades);
     overflow-y: hidden;
 }
 
 #pageContent{
-    background-color: var(--light-shades);
+    background-color: var(--dark-shades);
     display: flex;
     justify-content: space-between;
 }
 
 header{
     background-color: var(--main-brand);
-    padding: 10px;
     display: flex;
-    justify-content: space-between;
+    padding: 10px 0px 10px 0px;
     height: 5vh;
-}header div{width: 50%;}header h1{margin-top: auto;margin-bottom: auto;margin-left: 20px;}
+    align-items: center;
+}
 
 #search{
     text-align: center;
-}#search input{height: 90%;width: 90%;text-align: center;}
+    width: 60%;
+}
+
+#search input{
+    height: 4vh;
+    width: 90%;
+    text-align: center;
+}
+
+#icone{
+    width: 20%;
+    text-align: center;
+}
+
+#icone img{
+    width: calc(10vmax + 60px);
+    vertical-align: middle;
+}
+
+#botões{
+    width: 20%;
+    text-align: end;
+}
+
+#botões button{
+    margin-right: 10px;
+}
+
+
+
 
 #filter{
     background-color: var(--dark-shades);
@@ -114,7 +143,10 @@ footer{
 }
 
 @media (max-width: 800px) {
-
+    #icone img{
+        content: url("../images/logoIcon.png");
+        width: calc(4vmax + 20px)
+    }
     #ToolBar{
         position: fixed;
         bottom: 0%;
