--- a/styles/estiloUser.css
+++ b/styles/estiloUser.css
@@ -15,7 +15,7 @@ body{
     background-color: aqua;
     width: 300px;
     height: 300px;
-}  */
+} */
 
 /*  */
 
@@ -59,6 +59,7 @@ body{
     border-radius: 100%;
     width: 100%;
     aspect-ratio: 1/1;
+    background: transparent; /* Avaliar se queremos deixar transparente */
 }
 
 #boxTexto{
@@ -120,6 +121,7 @@ body{
     justify-content: space-between;
 }
 
+/* Posts */
 
 #boxPostsDoUser{
     background-color: rgb(160, 17, 17);
@@ -142,6 +144,16 @@ body{
     border-radius: 10px;
 }
 
+/* Converter para classe */
+/* Consertar especificidades */
+#postResult{
+
+}
+
+
+/* Conquistas */
+
+
 #boxConquistas{
     background-color: rgb(255, 255, 255);
     width: 37%;
@@ -158,16 +170,13 @@ body{
     background-color: blue;
 
     display: flex;
+    flex-direction: column;
+
     overflow-y: scroll;
     scroll-snap-type: y mandatory;
 }
 
-#quadradoConquistas ::-webkit-scrollbar {
-    display: none;
-    width: 0;
-}
-
-#quadradoConquistas::-webkit-scrollbar-thumb {
+#quadradoConquistas::-webkit-scrollbar{
     width: 0;
     display: none;
 }
@@ -175,22 +184,32 @@ body{
 .cardConquista{
     background-color: green;
     width: 100%;
-    height: 50px;
+    height: 16%;
 
     display: flex;
+
+    border-bottom: 2px solid black;
 }
 
+/* Melhorar responsibilidade */
 .boxIconeConquista{
     background-color: purple;
-    width: 20%;
-    height: 50px;
+    /* width: 30%; */
+    height: 100%;
+    aspect-ratio: 1/1;
+}
+
+.boxIconeConquista img{
+    width: 100%;
+    aspect-ratio: 1/1;
 }
 
 .textoConquista{
     background-color: wheat;
-    width: 80%;
-    height: 50px;
+    width: -webkit-fill-available;
+    height: 100%;
 }
+/* Melhorar responsibilidade */
 
 @media(max-width: 800px){
     #side {
