--- a/styles/styleGenerico.css
+++ b/styles/styleGenerico.css
@@ -14,6 +14,9 @@
     border-radius: 10px;
     color: var(--dark-shades);
     flex-shrink: 0;
+    padding-right: 3%;
+    padding-left: 3%;
+    padding-bottom: 3%;
 }
 
 .postResult a{
