--- a/styles/appStyle.css
+++ b/styles/appStyle.css
@@ -189,3 +189,28 @@ footer{
         flex-direction: row !important;
     }
 }
+
+#rankDiv{
+    padding: 1px;    
+    border-radius: 10px;
+    width: 100%;
+}
+
+.rankResult{
+    background-color: var(--main-brand);
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    margin: 10px;
+    border-radius: 10px;
+    justify-content: space-between;
+    height: 30px;
+}.rankResult img{
+    height: 100%;
+}
+
+
+
+
+
+
