--- a/styles/style.css
+++ b/styles/style.css
@@ -37,7 +37,7 @@ button{
 .Lista a {
   font-size: 30px;
   font-weight: 100;
-  color: var(--light-shades);
+  color: var(--dark-shades);
   transition: all 0.55s ease-in-out;
   position: relative;
 }
@@ -49,7 +49,7 @@ button{
   left: 0;
   width: 0;
   height: 2px;
-  background-color: var(--light-accent);
+  background-color: var(--dark-accent);
   transition: width 0.3s;
 }
 
@@ -93,6 +93,10 @@ align-items: center;
   width: calc(2vmax + 20px);
 }
 
+#tema, #tema2{
+  filter:invert(100%);
+}
+
 .TemaButton, #IconeMenu{
 position: absolute;
 right: calc(2vmax + 10px);
@@ -102,6 +106,10 @@ right: calc(2vmax + 10px);
   z-index: 2;
   cursor: pointer;
   display: none;
+}
+
+.IconeMenuImg{
+  filter: invert(100%);
 }
 
 .Oculto {
@@ -234,7 +242,7 @@ right: 1.5vmax;
     padding: 20px;
     flex-direction: column;
     align-items: center;
-    background: var(--dark-accent);
+    background: var(--main-brand);
     transition: all 0.5s ease;
     gap:0;
   }
